--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -112,6 +112,12 @@
 					</div>
 
 					<div class="row rowadduser">
+						<div class="col hdr_label">Role Sought</div>
+						<div class="col"><input type="text" class="inpt-tab-std" formControlName="roleSought"/></div>
+					</div>
+
+
+					<div class="row rowadduser">
 						<div class="col hdr_label">Years Experience</div>
 						<div class="col"><input type="text" class="inpt-tab-std" formControlName="yearsExperience"/></div>
 					</div>
