--- a/recruit-gui/src/app/view-candidates/view-candidates.component.html
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.html
@@ -61,7 +61,8 @@
                 <div class="col-1 medicol">{{candidate.candidateId}}</div>
                 <div class="col-1 microcol">{{candidate.country}}</div>
                 <div class="col-1">{{candidate.city}}</div>
-                <div class="col-1">{{pretifyFunction(candidate.function)}}</div>
+                <!--<div class="col-1">{{pretifyFunction(candidate.function)}}</div>-->
+                <div class="col-1">{{candidate.roleSought}}</div>
                 <div class="col-1 microcol">{{candidate.perm}}</div>
                 <div class="col-1 microcol">{{candidate.freelance}}</div>
                 <div class="col-1 microcol">{{candidate.yearsExperience}}</div>
