--- a/recruit-gui/src/app/view-candidates/view-candidates.component.html
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="row" *ngFor="let candidate of candidates">
-                <div class="col-1 medicol">{{candidate.candidateId}}</div>
+                <div class="col-1 medicol"><span class="candidate-id-prefix">C</span>{{candidate.candidateId}}</div>
                 <div class="col-1 microcol">{{candidate.country}}</div>
                 <div class="col-1">{{candidate.city}}</div>
                 <!--<div class="col-1">{{pretifyFunction(candidate.function)}}</div>-->
