--- a/recruit-gui/src/styles.css
+++ b/recruit-gui/src/styles.css
@@ -33,9 +33,14 @@ body{
     margin: 0 auto;
 }
 
+.wholepagerow{
+	margin: 0 auto;
+	width:1050px;
+}
+
 .wholepage{
     margin:0 auto;
-	width:800px;
+	width:1500px;
 }
 
 .bg-tab-hdr{
@@ -61,7 +66,7 @@ body{
 }
 
 .inpt-tab-std{
-	width:150px;
+	width:350px;
 }
 
 .dropdown-item{
@@ -69,7 +74,7 @@ body{
 }
 
 .skills{
-	width:350px;
+	width:470px;
 	height:130px;
 	text-align: top;
 	margin-bottom:20px;
@@ -82,7 +87,7 @@ body{
 .halpagecol{
 	margin-left:10px;
 	margin-right:10px;
-	max-width: 400px;
+	max-width: 500px;
 }
 
 
