--- a/recruit-gui/src/app/view-candidates/view-candidates.component.css
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.css
@@ -90,3 +90,25 @@
  .candidate-id-prefix{
      color:#6A5ACD;
  }
+
+ .pagination-row{
+    margin-bottom:10px;
+ }
+
+ .pagination-col{
+     margin-left:25px;
+ }
+ .candidate-nav{
+     cursor:pointer;
+     color:blue;
+     font-weight:bold;
+     margin-left:20px;
+     margin-right:20px;
+ }
+
+ .candidate-nav-disabled{
+     color:grey;
+     font-weight:bold;
+     margin-left:20px;
+     margin-right:20px;
+ }
