--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -9,11 +9,12 @@
            <a  class="dropdown-item" routerLink="/">Home</a>
         </li>
         <li class="nav-item">
-           <a  class="dropdown-item" routerLink="/new-candidate">New Candidate</a>
-        </li>
-        <li class="nav-item">
            <a  class="dropdown-item" routerLink="/view-candidates">View Candidates</a>
         </li>
+        <li class="nav-item" *ngIf="isAuthenticatedAsAdmin()">
+           <a  class="dropdown-item" routerLink="/new-candidate">New Candidate</a>
+        </li>
+        
       </ul>
   </div>
 </nav>
