--- a/recruit-gui/src/app/view-candidates/view-candidates.component.html
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.html
@@ -10,8 +10,6 @@
               </div> 
             </div>
 
-
-
             <div class="row pagination-row">
               <div class="col-sm-10"></div>
               <div class="col-sm-1 pagination-col">
@@ -20,7 +18,7 @@
                   <span *ngSwitchCase="false" class="candidate-nav-disabled"><<<<<</span>
                 </span>
                
-                <span class="">{{currentPage}}</span>
+                <span class="">{{currentPage+1}}</span>
                
                 <span [ngSwitch]="showNavNext()">
                   <span *ngSwitchCase="true"class="candidate-nav" (click)="nextPage()">>>>>></span>
