--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -157,12 +157,20 @@
 
 </div>
 
+
+
 	<ng-template #feedbackBox let-modal>
 	
+		<div class="modal-header">
+			<h4 class="modal-title">&nbsp;</h4>
+    		<div class="filter-close-box" (click)="closeModal()">X</div>
+  		</div>
 		<div class="feedbackBox; {{feedbackBoxClass}}">
+			<!--
 			<div class="modal-header">
 				<p class="modal-header-text">{{feedbackBoxTitle}}</p>
 			</div>
+		-->
 			<div class="modal-body">
 				<p class="modal-body-text">{{feedbackBoxText}}</p>
 			</div>       
