--- a/recruit-gui/src/app/view-candidates/view-candidates.component.css
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.css
@@ -112,3 +112,10 @@
      margin-left:20px;
      margin-right:20px;
  }
+
+ .filter-close-box{
+     padding:10px;
+     cursor:pointer;
+     font-size:20px;
+     font-weight: bold;
+ }
