--- a/recruit-gui/src/app/view-candidates/view-candidates.component.html
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.html
@@ -50,7 +50,7 @@
                 <div class="col-1 bg-tab-hdr fltrcol" (click)="open(mymodal, 'city')">
                 <span class="material-icons {{isFilterCityActiveClass()}}">filter_alt</span>
                 </div>
-                <div class="col-1 bg-tab-hdr fltrcol" (click)="open(mymodal, 'function')">
+                <div class="col-1 bg-tab-hdr fltrcol" (click)="open(mymodal, 'roleSought')">
                 <span class="material-icons {{isFilterFunctionActiveClass()}}">filter_alt</span>
                 </div>
                 <div class="col-1 bg-tab-hdr microcol fltrcol" (click)="open(mymodal, 'perm')">
@@ -156,7 +156,7 @@
           </div>
           <div *ngSwitchCase="'city'">
           </div>
-          <div *ngSwitchCase="'function'">
+          <div *ngSwitchCase="'roleSought'">
             
             <form [formGroup]="functionTypeFilterForm">
               <div class="row">
