basic file upload download

--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -12,6 +12,13 @@
 						</div>
 						
 						<div class="row rowadduser">
+							<div class="col hdr_label">Curriculum</div>
+							<div class="col">
+								<input type="file" (change)="uploadCurriculumFile($event)">
+							</div>
+						</div>
+						
+						<div class="row rowadduser">
 							<div class="col hdr_label">Candidate Id</div>
 							<div class="col"><input type="text" class="inpt-tab-std" formControlName="candidateId"/></div>
 						</div>
