--- a/recruit-gui/src/app/view-candidates/view-candidates.component.html
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.html
@@ -63,13 +63,13 @@
                 <span class="material-icons {{isFilterYearsExperienceActiveClass()}}">filter_alt</span>
                 </div>
                 <div class="col-1 bg-tab-hdr medicol fltrcol" (click)="open(mymodal, 'dutch')">
-                  <span class="material-icons">filter_alt</span>
+                  <span class="material-icons {{isFilterDutchActiveClass()}}">filter_alt</span>
                 </div>
                 <div class="col-1 bg-tab-hdr medicol fltrcol" (click)="open(mymodal, 'english')">
-                  <span class="material-icons">filter_alt</span>
+                  <span class="material-icons {{isFilterEnglishActiveClass()}}">filter_alt</span>
                 </div>
                 <div class="col-1 bg-tab-hdr medicol fltrcol" (click)="open(mymodal, 'french')">
-                  <span class="material-icons">filter_alt</span>
+                  <span class="material-icons {{isFilterFrenchActiveClass()}}">filter_alt</span>
                 </div>
                 <div class="col-2 bg-tab-hdr medicol fltrcol" (click)="open(mymodal, 'skills')">
                   <span class="material-icons">filter_alt</span>
@@ -246,6 +246,69 @@
 					</select>
                   </div>
                 </form>
+              </div>
+            </div>
+          </div>
+          
+           <div  *ngSwitchCase="'dutch'">
+            <div class="row">
+              <div class="col">
+                <label class="modal-label">Dutch Language</label>
+              </div>
+              <div class="col">
+                <form [formGroup]="dutchFilterForm">
+                  <div>
+                  	<label>Greater than or equal to</label>
+                    <select class="inpt-tab-std" formControlName="level" (change)="updateFilters()">
+						<option value=""></option>
+						<option value="PROFICIENT">Proficient</option>
+						<option value="BASIC">Basic</option>
+						
+					</select>
+                  </div>
+                 </form>
+              </div>
+            </div>
+          </div>
+          
+           <div  *ngSwitchCase="'french'">
+            <div class="row">
+              <div class="col">
+                <label class="modal-label">Dutch Language</label>
+              </div>
+              <div class="col">
+                <form [formGroup]="frenchFilterForm">
+                  <div>
+                  	<label>Greater than or equal to</label>
+                    <select class="inpt-tab-std" formControlName="level" (change)="updateFilters()">
+						<option value=""></option>
+						<option value="PROFICIENT">Proficient</option>
+						<option value="BASIC">Basic</option>
+						
+					</select>
+                  </div>
+                 </form>
+              </div>
+            </div>
+          </div>
+          
+           <div  *ngSwitchCase="'english'">
+            <div class="row">
+              <div class="col">
+                <label class="modal-label">Dutch Language</label>
+              </div>
+              <div class="col">
+                <form [formGroup]="englishFilterForm">
+                  <div>
+                  	<label>Greater than or equal to</label>
+                    <select class="inpt-tab-std" formControlName="level" (change)="updateFilters()">
+						<option value=""></option>
+						<option value="PROFICIENT">Proficient</option>
+						<option value="BASIC">Basic</option>
+						
+					</select>
+                  </div>
+                 </form>
               </div>
             </div>
           </div>
