--- a/recruit-gui/src/app/view-candidates/view-candidates.component.css
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.css
@@ -69,8 +69,6 @@
 
  .modal-label{
      padding-right:10px;
-
-     
  }
 
  .filtercheckbox{
@@ -119,3 +117,36 @@
      font-size:20px;
      font-weight: bold;
  }
+ 
+ .input-small{
+ 	width:200px;
+ }
+ 
+ .selected-skills-filter{
+	min-height:100px;
+	margin-top:10px;	
+	display: inline-block; 
+ }
+ 
+ .selected-skill{
+ 	margin:2px;
+ 	padding:5px;
+ 	border-radius:5px;
+ 	background:grey;
+ 	display:inline-block;
+ }
+ 
+ .selected-skill:hover{
+ 	margin:2px;
+ 	padding:5px;
+ 	border-radius:5px;
+ 	background:red;
+ 	cursor:pointer;
+ 	display:inline-block;
+ }
+
+.modal-body{
+	min-height:150px;
+}
+ 
+ 
