--- a/recruit-gui/src/app/view-candidates/view-candidates.component.css
+++ b/recruit-gui/src/app/view-candidates/view-candidates.component.css
@@ -1,12 +1,3 @@
-.col-1{
-    border:1px black solid;
-    background-color: #ffffff;    font-size: x-small;
-    text-align: center;
-    margin: 0px;
-    padding: 5px;
-    max-width: 120px;
-}
-
 .action-buttons{
 	text-align:right;
 	margin-right:40px;
@@ -36,29 +27,55 @@
      margin-right:20px;
  }
 
+.candidate-table{
+	margin-left:20px;
+	margin-right:20px;
+	vertical-align:middle;
+}
 
-.microcol{
-    max-width: 60px;
+
+.bg-tab-hdr{
+	border:1px black solid;
+	background: #6c757d;
+    color: #ffffff;
+    font-size: x-small;
+    white-space:nowrap;
+    padding:5px;
+    margin:5px;
+    text-align:center;
+    padding-left:5px;
+    padding-right:5px;
+    min-width:50px;
+}
+
+.fltrcol{
+	
+    background:#E8E8E8;
+    padding:0px;
+    margin:0px;
+    cursor:pointer;
+}
+
+.candidate-tab-col{
+    border:1px black solid;
+    background-color: #ffffff;
+    font-size: x-small;
+    text-align: center;
+    padding: 5px;
+}
+
+.mini-col{
+	min-width:20px;
 }
 
 .medicol{
-    max-width: 90px;
-}
-.col-2{
-    border:1px black solid;
-    background-color: #ffffff;    font-size: x-small;
-    text-align: left;
-    margin: 0px;
-    padding: 5px;
-    min-width: 580px;
-    max-width:580px;
+    width: 150px;   
 }
 
-.bg-tab-hdr{
-	background: #6c757d;
-    color: #ffffff;
-    column-width: 100px;
+.lang-col{
+	width:65px;
 }
+
 
 .centerdiv{
     margin: 0 auto;
@@ -77,12 +94,7 @@
     min-width:100px;
 }
 
-.fltrcol{
-    background:#E8E8E8;
-    text-align:center;
-    height:25px;
-    cursor:pointer;
-}
+
 .material-icons {
     font-size: 16px;
     color:#6c757d;
